--- a/MentorJ.Android/MentorJ.Android.csproj
+++ b/MentorJ.Android/MentorJ.Android.csproj
@@ -80,11 +80,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Activities\LoginActivity.cs" />
     <Compile Include="Activities\MainActivity.cs" />
+    <Compile Include="Activities\RegisterActivity.cs" />
+    <Compile Include="Activities\StoryBoardCode.cs" />
     <Compile Include="MentorJService.cs" />
-    <Compile Include="Models\tblUserInfo.cs" />
+    <Compile Include="Models\sqltblUserInfo.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SQL\SQLiteUtilities.cs" />
+    <Compile Include="Utilities\AppPreferences.cs" />
     <Compile Include="Utilities\Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
