--- a/MentorJ.Android/MentorJ.Android.csproj
+++ b/MentorJ.Android/MentorJ.Android.csproj
@@ -112,12 +112,17 @@
     <Compile Include="Activities\MainActivity.cs" />
     <Compile Include="Activities\RegisterActivity.cs" />
     <Compile Include="Activities\MyProfileActivity.cs" />
+    <Compile Include="Activities\SlidingTabActivity.cs" />
     <Compile Include="MentorJService.cs" />
     <Compile Include="Models\sqltblUserInfo.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQL\SQLiteUtilities.cs" />
     <Compile Include="Utilities\AppPreferences.cs" />
+    <Compile Include="Utilities\PageAdapter.cs" />
+    <Compile Include="Utilities\SlidingTabFragment.cs" />
+    <Compile Include="Utilities\SlidingTabScrollView.cs" />
+    <Compile Include="Utilities\SlidingTabStrip.cs" />
     <Compile Include="Utilities\Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -136,7 +141,13 @@
     </AndroidResource>
     <AndroidResource Include="Resources\layout\RegisterBasicInfo.axml" />
     <AndroidResource Include="Resources\layout\RegisterAdditionalInfo.axml" />
-    <AndroidResource Include="Resources\layout\ForgotPw.axml" />
+    <AndroidResource Include="Resources\layout\Forum.axml" />
+    <AndroidResource Include="Resources\layout\GroupsPage.axml" />
+    <AndroidResource Include="Resources\layout\FragmentSample.axml" />
+    <AndroidResource Include="Resources\layout\ProfilePage.axml" />
+    <AndroidResource Include="Resources\layout\PagerItem.axml" />
+    <AndroidResource Include="Resources\layout\MainScrollLayout.axml" />
+    <AndroidResource Include="Resources\layout\ForgotPassword.axml" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\Main.axml">
@@ -169,6 +180,9 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\SpinnerItem.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\values\Themes.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
